# rtcwcoop

./: .gitignore  Administration.md  COPYING.txt  Dockerfile  HOWTO-Build.txt  HowTo.md  MOTDs.md  Makefile  Mapping.md  Models.md  ProjectHome.md  README  SettingUpAServerExtendedVersion.md  banning.md  compile.sh  create_pk3_64.sh  homeServerSimple.md  make-macosx-app.sh  make-macosx-ub.sh  make-macosx.sh  make-macosx_xcode3.sh  make-macosx_xcode4.sh  make-macosx_xcode4_5.sh  make-macosx_xcode5.sh  make-raspberrypi.sh  pak.sh  rend2-readme.md  rend2-readme.txt  run.sh
trunk/: CMakeLists.txt  Makefile  README  TODO  coop-changelog.txt  create_pk3.bat  create_pk3.sh  create_pk3_64.sh  cross-make-mingw.sh  make-macosx-app.sh  make-macosx-ub.sh  make-macosx_xcode3.sh  make-macosx_xcode4.sh  make-macosx_xcode4_5.sh  make-macosx_xcode5.sh  rend2-readme.txt
trunk/code/botlib/: be_aas_reach.c  be_aas_route.c  l_precomp.c  l_script.c
trunk/code/cgame/: cg_draw.c  cg_flamethrower.c  cg_hud.c  cg_info.c  cg_main.c  cg_omnibot.c  cg_playerstate.c
trunk/code/client/: cl_cgame.c  cl_main.c  cl_ui.c  client.h  snd_dma.c  snd_mix.c  snd_openal.c
trunk/code/game/: ai_cast_fight.c  ai_cast_funcs.c  ai_cast_script_actions.c  ai_cast_sight.c  ai_cast_think.c  ai_dmnet.c  ai_dmq3.c  ai_team.c  ai_team.h  bg_animation.c  bg_misc.c  g_client.c  g_cmds.c  g_coop.c  g_func_decs.h  g_funcs.h  g_items.c  g_local.h  g_main.c  g_mover.c  g_svcmds.c  g_tramcar.c  g_weapon.c
trunk/code/qcommon/: cm_public.h  common.c  files.c  htable.c  q_shared.h  qcommon.h
trunk/code/rend2/: tr_animation.c  tr_backend.c  tr_bsp.c  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_model.c  tr_scene.c  tr_shade.c  tr_shader.c
trunk/code/renderer/: tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmesh.c  tr_init.c  tr_local.h  tr_model.c  tr_shader.c
trunk/code/server/: server.h  sv_ccmds.c  sv_client.c  sv_init.c  sv_main.c  sv_world.c
trunk/code/splines/: splines.cpp
trunk/code/ui/: ui_main.c
trunk/create_release/: create_windows.sh
trunk/main/ui/: menudef.h
trunk/media/: sp_pak_coop1.pk3  sp_pak_coop1_levelshots.pk3
trunk/media/Installer/: about.txt
trunk/media/maps/: baseout.ents  castle.ents  crypt1.ai  crypt2.ai  crypt2.ents  dark.script  dig.script  end.script  escape1.ents  escape2.ents  factory.ents  sfm.ents  swf.ai  swf.ent  tram.ents  tram.script  village2.ai  village2.ents
trunk/media/scripts/: arenas.txt
trunk/media/sp_pak_coop1/: coopgameinfo.txt
trunk/media/ui/: filter.menu  ingame_callvote.menu  ingame_join.menu  ingame_multiset.menu  multi.menu  password.menu  serverinfo.menu  system.menu
trunk/misc/: wolfsp.icns
trunk/other_files/: sp_pak_coop.pk3  sp_pak_coop_maps.pk3  sp_pak_coop_ui.pk3
trunk/other_files/ents_files/: tram.ents
trunk/src/: SourceLists.cmake  wolf.sln  wolf.vcproj
trunk/src/botai/: ai_chat.c  ai_cmd.c  ai_dmq3.c  ai_main.c  ai_team.c  botai.h  match.h
trunk/src/botlib/: aasfile.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_debug.c  be_aas_def.h  be_aas_entity.h  be_aas_file.h  be_aas_main.h  be_aas_move.c  be_aas_optimize.c  be_aas_reach.c  be_aas_route.c  be_aas_route.h  be_aas_routetable.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_interface.h  botlib.vcproj  l_libvar.h  l_log.c  l_memory.c  l_memory.h  l_precomp.c  l_script.c  l_struct.c  l_utils.h
trunk/src/cgame/: cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_flamethrower.c  cg_hud.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newDraw.c  cg_omnibot.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_sound.c  cg_syscalls.c  cg_trails.c  cg_view.c  cg_weapons.c  cgame.vcproj  tr_types.h
trunk/src/client/: cl_cgame.c  cl_cin.c  cl_console.c  cl_input.c  cl_irc.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keys.h  snd_adpcm.c  snd_dma.c  snd_mem.c  snd_mix.c  snd_wavelet.c
trunk/src/database/: database.h  db_main.c  db_mysql.c
trunk/src/extractfuncs/: extractfuncs.vcproj
trunk/src/game/: ai_cast.c  ai_cast.h  ai_cast_characters.c  ai_cast_debug.c  ai_cast_events.c  ai_cast_fight.c  ai_cast_func_attack.c  ai_cast_func_boss1.c  ai_cast_funcs.c  ai_cast_script.c  ai_cast_script_actions.c  ai_cast_script_ents.c  ai_cast_sight.c  ai_cast_think.c  be_ai_move.h  be_ea.h  bg_animation.c  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  g_active.c  g_admin.c  g_admin.h  g_alarm.c  g_antilag.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_coop.c  g_coop.h  g_files.c  g_func_decs.h  g_funcs.h  g_items.c  g_local.h  g_main.c  g_mem.c  (+23 more)
trunk/src/jpeg-6/: jchuff.c  jcmainct.c  jcmaster.c  jconfig.h  jdcoefct.c  jdcolor.c  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmaster.c  jdpostct.c  jdsample.c
trunk/src/mysql/: EXCEPTIONS-CLIENT  README
trunk/src/null/: null_input.c  null_snddma.c
trunk/src/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  dl_main_curl.c  dl_public.h  files.c  htable.c  htable.h  msg.c  net_chan.c  net_ip.c  qcommon.h  unzip.c  unzip.h  vm.c
trunk/src/renderer/: anorms256.h  qgl.h  qgl_linked.h  renderer.vcproj  tr_animation.c  tr_backend.c  tr_bloom.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_flares.c  tr_font.c  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_public.h  tr_shade.c  tr_shade_calc.c  tr_shader.c
trunk/src/sdl/: sdl_glimp.c  sdl_icon.h  sdl_input.c  sdl_snd.c
trunk/src/server/: server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_http.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_world.c
trunk/src/splines/: Splines.vcproj  math_angles.h  math_matrix.h  math_quaternion.h  math_vector.h  q_splineshared.h  splines.cpp  splines.h  util_list.h  util_str.h
trunk/src/sys/: con_log.c  con_tty.c  con_win32.c  sys_loadlib.h  sys_local.h  sys_main.c  sys_osx.m  sys_unix.c  sys_win32.c  win_resource.rc
trunk/src/ui/: ui.vcproj  (+10 more)
(+1851 files in other folders)
